<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollable"
    android:background="@color/white">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WelcomeScreen"
    android:id="@+id/parent">

    <ImageView
        android:id="@+id/img_ellepse"
        android:layout_width="230dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ellipse_one" />

    <ImageView
        android:id="@+id/img_ellepse2"
        android:layout_width="450dp"
        android:layout_height="450dp"
        android:layout_marginTop="-150dp"
        android:layout_marginEnd="-110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_ellepse"
        app:srcCompat="@drawable/ellipse_two" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_here"
        android:textColor="@color/DiscoverText"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/ed_login_emil_address"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_ed_login"
        android:textColorHint="@color/text_ed_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/ed_login_pass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text_ed_login"
        android:textColorHint="@color/text_ed_login"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_emil_address"
        app:layout_constraintStart_toStartOf="@+id/ed_login_emil_address"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_emil_address" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/DiscoverText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_pass"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_pass" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/DiscoverText"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp"
        app:cornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_pass"
        app:layout_constraintStart_toStartOf="@+id/ed_login_pass"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_new_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/create_new_account"
        android:textColor="@color/new_acc"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/or_continue_with"
        android:textColor="@color/DiscoverText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_new_acc"
        app:layout_constraintStart_toStartOf="@+id/tv_new_acc"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_acc" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="-190dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="-180dp"
        android:layout_marginTop="40dp"
        android:rotation="-60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/ic_google" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_apple" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>